--- a/FrontEnd/mementomori/src/components/Calendario.css
+++ b/FrontEnd/mementomori/src/components/Calendario.css
@@ -2,9 +2,10 @@
  .calendar-container{
     background-color:rgb(108, 195, 224);
      min-height:100vh; 
-    /* overflow: scroll; */
-    /* overflow-x: hidden; */
+     /* overflow: scroll;  */
+      /* overflow-x: hidden;   */
     display:flex;
     justify-content: center;
+    width:100%;
  }
 
